--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-lottie": "^1.2.4",
+    "react-three-fiber": "^6.0.13",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.167.1",
